--- a/style.css
+++ b/style.css
@@ -118,10 +118,9 @@ h3 {
 
 .games {
     display: flex;
-
     flex-wrap: wrap;
     align-items: center;
-    background-color: rgba(0, 0, 47, 0.3);
+    /* background-color: rgba(0, 0, 47, 0.3); */
     justify-content: space-evenly;
 }
 
