--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     background-color: rgba(0, 0, 21, 1);
 }
 
-
 /* Footer Styling */
 footer {
     text-align: center;
@@ -14,7 +13,6 @@ footer {
 }
 
 .header {
-
     position: relative;
 }
 
@@ -24,13 +22,10 @@ footer {
     justify-content: space-evenly !important;
     color: orange;
     font-size: 18px !important;
-
-
 }
 
 #navDemo {
     background-color: #000015;
-
 }
 
 #navDemo a {
@@ -45,8 +40,6 @@ footer {
     background-size: cover;
     background-position: center;
     background-color: #000015;
-
-
 }
 
 .hero-description {
@@ -60,7 +53,6 @@ footer {
     margin: auto !important;
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .hero-text p {
@@ -74,9 +66,7 @@ footer {
     text-transform: uppercase;
     font-size: 80px;
     color: orange;
-
     text-align: center;
-
 }
 
 .social {
@@ -86,7 +76,6 @@ footer {
 .icons {
     font-size: 20px;
     letter-spacing: 5px;
-
 }
 
 main {
@@ -98,11 +87,9 @@ main {
     color: white;
     font-weight: 600;
     font-size: 40px;
-    ;
     margin: 50px 0px;
     text-align: center;
     text-transform: uppercase;
-
 }
 
 .game-logo img {
@@ -120,29 +107,71 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    /* background-color: rgba(0, 0, 47, 0.3); */
     justify-content: space-evenly;
 }
 
 .game-list {
-    margin: 30px;
-    ;
-    padding: 20px;
+    cursor: pointer;
     height: 200px;
     width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+
+}
+
+.tooltip {
+
+    visibility: hidden;
+    width: max-content;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: #fff;
+    text-align: center;
+    padding: 5px 8px;
+    border-radius: 6px;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    z-index: 10;
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+    white-space: nowrap;
+    cursor: pointer;
     border: 1px solid gray;
     background: rgba(255, 75, 255, 0.1);
-    box-shadow: 0 8px 40px 0 rgba(45, 57, 231, 0.37);
+    box-shadow: 0 8px 40px 0 rgba(145, 193, 255, 0.37);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.game-list:hover {
+.tooltip::after {
+    content: "";
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 8.5px;
+    border-style: solid;
+    border-color: transparent transparent rgba(0, 0, 0, 0.8) transparent;
+    /* Upward pointing arrow */
+}
+
+.game-list:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+}
+
+.game-list i {
+    transition: transform 0.2s;
+}
+
+.game-store-list:hover {
     transform: scale(1.05);
 }
 
@@ -151,11 +180,13 @@ h3 {
 }
 
 .game-store {
+    text-decoration: none;
     margin-top: 20px !important;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
+
 
 .game-image {
     width: 300px;
@@ -167,9 +198,11 @@ h3 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: brightness(60%);
 }
 
 .game-store-list {
+    text-decoration: none;
     width: 300px;
     height: 300px;
     margin: 20px;
@@ -183,10 +216,14 @@ h3 {
     border-bottom: 1px solid blueviolet;
     color: white;
 
+    cursor: pointer;
+
+    background: rgba(255, 75, 255, 0.1);
+    border-radius: 10px;
 }
 
 .store-text-description {
-
+    text-decoration: none;
     padding-left: 20px;
     display: flex;
     flex-direction: column;
@@ -223,23 +260,26 @@ h4 {
     border: 1px solid black;
     border-radius: 10px;
     max-height: 500px;
-    
+
 }
 
 .event-text {
-    width: 50%;
+    width: 100%;
     color: orange;
+    justify-content: space-evenly;
 }
 
 .event-title {
     font-size: 40px;
     text-transform: uppercase;
     font-weight: 600;
+    width: 60%;
 }
 
 .event-text p {
     color: white;
 }
+
 .commentHead {
     display: flex;
     flex-direction: column;
@@ -253,19 +293,28 @@ h4 {
     width: 100%;
 }
 
-.custom-section{
+.custom-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     width: 67%;
 }
+
 .custom-section form {
-    
+
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     gap: 20px 0;
     width: 100%;
+}
+a,
+a:link,
+a:visited,
+a:hover,
+a:active {
+    text-decoration: none;
+    color: inherit; 
 }
 
 .custom-section input,
@@ -525,8 +574,6 @@ html {
         font-size: 22px;
         text-transform: uppercase;
         font-weight: 600;
-
-
     }
 
     .event-hero {
@@ -544,6 +591,7 @@ html {
         font-size: 12px;
         width: 100%;
     }
+
     .custom-section form {
         width: 70%;
     }
@@ -552,7 +600,6 @@ html {
         margin-left: 30% !important;
         margin-right: 30% !important;
         min-block-size: none;
-        
     }
 
     h5 {
@@ -562,5 +609,15 @@ html {
     p {
         font-size: 12px;
     }
+
+    .game-list i {
+        font-size: 40px;
+    }
+
+    .tooltip {
+        font-size: 14px;
+        padding: 6px 10px;
+    }
+
 
 }
